[package]
name = "poifyi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = "0.4.0"
anyhow = "1.0.70"
axum = "0.6.12"
log = "0.4.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
webfinger = "0.5.1"
diesel = { version = "2.0.0", features = ["postgres"] }
url = "2.3.1"
actix-rt = "2.8.0"
env_logger = "0.10.0"
